# f5c

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  cmakerun.sh  f5c.c  nanopolish_read_db.c  nanopolish_read_db.cpp  nanopolish_read_db.h  todo.md
_docs/: commands.md
build-android/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake  rules.ninja
build-android/examples/: cmake_install.cmake  f5c_example
build-android/hdf5-1.10.4/: Makefile  config.lt  config.status  libtool
build-android/hdf5-1.10.4/c++/: Makefile
build-android/hdf5-1.10.4/c++/examples/: Makefile  testh5c++.sh
build-android/hdf5-1.10.4/c++/src/: Makefile  h5c++
build-android/hdf5-1.10.4/c++/test/: Makefile
build-android/hdf5-1.10.4/examples/: Makefile  testh5cc.sh
build-android/hdf5-1.10.4/fortran/: Makefile
build-android/hdf5-1.10.4/fortran/examples/: Makefile  testh5fc.sh
build-android/hdf5-1.10.4/fortran/src/: Makefile  h5fc
build-android/hdf5-1.10.4/fortran/test/: Makefile
build-android/hdf5-1.10.4/fortran/testpar/: Makefile
build-android/hdf5-1.10.4/hl/: Makefile
build-android/hdf5-1.10.4/hl/c++/: Makefile
build-android/hdf5-1.10.4/hl/c++/examples/: Makefile
build-android/hdf5-1.10.4/hl/c++/src/: Makefile
build-android/hdf5-1.10.4/hl/c++/test/: Makefile
build-android/hdf5-1.10.4/hl/examples/: Makefile
build-android/hdf5-1.10.4/hl/fortran/: Makefile
build-android/hdf5-1.10.4/hl/fortran/examples/: Makefile
build-android/hdf5-1.10.4/hl/fortran/src/: Makefile
build-android/hdf5-1.10.4/hl/fortran/test/: Makefile
build-android/hdf5-1.10.4/hl/src/: Makefile  libhdf5_hl.la
build-android/hdf5-1.10.4/hl/src/.libs/: libhdf5_hl.so.100.1.1
build-android/hdf5-1.10.4/hl/test/: Makefile  test_ds  test_dset_append  test_file_image  test_h5do_compat  test_image  test_ld  test_lite  test_packet  test_table
build-android/hdf5-1.10.4/hl/test/.libs/: test_ds  test_dset_append  test_file_image  test_h5do_compat  test_image  test_ld  test_lite  test_packet  test_table
build-android/hdf5-1.10.4/hl/tools/: Makefile
build-android/hdf5-1.10.4/hl/tools/gif2h5/: Makefile  gif2h5  h52gif  h52gifgentst
build-android/hdf5-1.10.4/hl/tools/h5watch/: Makefile  extend_dset  h5watch  h5watchgentest  swmr_check_compat_vfd
build-android/hdf5-1.10.4/java/: Makefile
build-android/hdf5-1.10.4/java/examples/: Makefile
build-android/hdf5-1.10.4/java/examples/datasets/: Makefile
build-android/hdf5-1.10.4/java/examples/datatypes/: Makefile
build-android/hdf5-1.10.4/java/examples/groups/: Makefile
build-android/hdf5-1.10.4/java/examples/intro/: Makefile
build-android/hdf5-1.10.4/java/src/: Makefile
build-android/hdf5-1.10.4/java/src/jni/: Makefile
build-android/hdf5-1.10.4/java/test/: Makefile
build-android/hdf5-1.10.4/src/: H5Tinit.c  H5detect  H5lib_settings.c  H5make_libsettings  Makefile  libhdf5.la  libhdf5.settings
build-android/hdf5-1.10.4/src/.libs/: libhdf5.lai
build-android/hdf5-1.10.4/test/: Makefile  accum  accum_swmr_reader  app_ref  atomic_reader  atomic_writer  big  bittests  btree2  cache  cache_api  cache_image  cache_logging  cache_tagging  cmpd_dset  cork  cross_read  dangle  direct_chunk  dsets  dt_arith  dtransform  dtypes  earray  efc  enc_dec_plist  enc_dec_plist_cross_platform  enum  err_compat  error_test  evict_on_close  extend  external  farray  fheap  file_image  filenotclosed  fillval  filter_fail  filter_plugin  (+50 more)
build-android/hdf5-1.10.4/test/.libs/: accum  accum_swmr_reader  app_ref  atomic_reader  atomic_writer  big  bittests  btree2  cache  cache_api  cache_image  cache_logging  cache_tagging  cmpd_dset  cork  cross_read  dangle  direct_chunk  dsets  dt_arith  dtransform  dtypes  earray  efc  enc_dec_plist  enc_dec_plist_cross_platform  enum  err_compat  error_test  evict_on_close  extend  external  farray  fheap  file_image  filenotclosed  fillval  filter_fail  filter_plugin  flush1  (+48 more)
build-android/hdf5-1.10.4/testpar/: Makefile
build-android/hdf5-1.10.4/tools/: Makefile
build-android/hdf5-1.10.4/tools/lib/: Makefile
build-android/hdf5-1.10.4/tools/src/: Makefile
build-android/hdf5-1.10.4/tools/src/h5copy/: Makefile  h5copy
build-android/hdf5-1.10.4/tools/src/h5diff/: Makefile  h5diff
build-android/hdf5-1.10.4/tools/src/h5dump/: Makefile  h5dump
build-android/hdf5-1.10.4/tools/src/h5format_convert/: Makefile  h5format_convert
build-android/hdf5-1.10.4/tools/src/h5import/: Makefile  h5import
build-android/hdf5-1.10.4/tools/src/h5jam/: Makefile  h5jam  h5unjam
build-android/hdf5-1.10.4/tools/test/: Makefile
build-android/htslib-1.9/: bcf_sr_sort.pico  bgzf.pico  bgzip  config.mk  config.status  errmod.pico  faidx.pico  hfile.pico  hfile_net.pico  hts.pico  hts_os.pico  kfunc.pico  knetfile.pico  kstring.pico  md5.pico  multipart.pico  probaln.pico  realn.pico  regidx.pico  sam.pico  synced_bcf_reader.pico  tabix  tbx.pico  textutils.pico  thread_pool.pico  vcf.pico  vcf_sweep.pico  vcfutils.pico
build-android/htslib-1.9/cram/: cram_codecs.pico  cram_decode.pico  cram_encode.pico  cram_external.pico  cram_index.pico  cram_io.pico  cram_samtools.pico  cram_stats.pico  files.pico  mFILE.pico  open_trace_file.pico  pooled_alloc.pico  rANS_static.pico  sam_header.pico  string_alloc.pico
build-android/htslib-1.9/test/: fieldarith  hfile  hts_endian  sam  test-bcf-sr  test-bcf-translate  test-regidx  test-vcf-api  test-vcf-sweep  test_bgzf  test_realn  test_view
build-android/lib/: libhdf5_hl.la  libhdf5_hl.so.100.1.1  libhts.so.1.9
build-android/lib/pkgconfig/: htslib.pc
build-android/src/: cmake_install.cmake  config.h
examples/: CMakeLists.txt  f5c_example.c
java_wrapper/: .gitignore  README.md
java_wrapper/c/: F5C.cpp  F5C.h
java_wrapper/c/include/: interface.h
java_wrapper/java/: F5C.java  TestProgram.java
scripts/: test_eventalign.sh
src/: CMakeLists.txt  error.h  eventalign.c  f5c.c  f5c.h  f5cmisc.h  freq.c  interface.h  main.c  meth_main.c  model.c  nanopolish_index.c  nanopolish_read_db.c  nanopolish_read_db.h  polya.c  polya.cpp
(+101 files in other folders)
